Trying to transplant the project's framework
